plugins {
    id 'java'
    id 'org.graalvm.buildtools.native' version '0.10.2'
    id 'org.jetbrains.kotlin.jvm' version '2.0.20'
    id 'org.jlleitschuh.gradle.ktlint' version '12.1.1'

    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.jetbrains.kotlin.plugin.spring' version '2.0.20'
}

group = 'com.pps.app'
version = '1.0-SNAPSHOT'

graalvmNative {
    binaries {
        main {
            buildArgs.add('--enable-preview')
        }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

kotlin {
    sourceCompatibility = JavaVersion.VERSION_21
    jvmToolchain(21)
}